# exam_mentor

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml  main.yml
assets/: exam.mov
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/: schema.sql
backend/src/: connection.rs  db.rs  handlers.rs  main.rs  models.rs  routes.rs
course_builder/: Dockerfile  package-lock.json  package.json
course_builder/src/: App.tsx  api.ts
course_builder/src/admin/: CourseDashboard.tsx
course_builder/src/components/: ChapterList.tsx  CourseForm.tsx  CourseList.tsx  SeedQuestions.tsx
course_builder/src/pages/: CourseDashboard.tsx  CoursePage.tsx  CreateCourse.tsx  Dashboard.tsx  StudentDashboard.tsx
course_builder/src/student/: CoursePage.tsx  QuizPage.tsx  StudentDashboard.tsx
go-backend/: .env  Dockerfile  go.mod  go.sum  main.go
go-backend/db/: db.go  schema.sql
go-backend/handlers/: chapters.go  courses.go  questions.go
go-backend/models/: chapter.go  course.go  question.go
go-backend/routes/: routes.go
model_service/: Dockerfile  app.py  requirements.txt  run_mistral.py  run_model.py  run_phi2.py  server-openai.py  test_model.py
model_service/.github/workflows/: docker-publish.yml
question_forge/: Dockerfile  questionforge.py
